searx/deploy.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  generation: 1
  name: searx
  namespace: default
spec:
  replicas: 1
  selector:
    matchLabels:
      app: searx
  template:
    metadata:
      labels:
        app: searx
    spec:
      containers:
      - env:
        - name: PUID
          value: "1000"
        - name: PGID
          value: "1000"
        - name: TZ
          value: America/Chicago
        - name: IMAGE_PROXY
          value: "True"
        - name: BASE_URL
          value: https://search.cloud.martinojones.com
        image: wonderfall/searx
        imagePullPolicy: Always
        name: searx
        ports:
        - containerPort: 8888
          name: searx
          protocol: TCP
