searx/ingress.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: searxsecure
  namespace: default
spec:
  entryPoints:
  - websecure
  routes:
  - kind: Rule
    match: Host(`search.cloud.martinojones.com`)
    services:
    - name: searx
      port: 8888
  tls:
    certResolver: default

---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: searx
  namespace: default
spec:
  entryPoints:
  - web
  routes:
  - kind: Rule
    match: Host(`search.cloud.martinojones.co`)
    middlewares:
    - name: redirecthttps
    services:
    - name: searx
      port: 8888
